<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:minHeight="@dimen/list_item_height"
        xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:id="@+id/image"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:id="@+id/text_container"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/image"
        android:paddingLeft="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:id="@+id/learn"
            tools:text="@string/learn_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:id="@+id/details"
            android:gravity="top"
            android:textStyle="bold"
            android:layout_below="@id/learn"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            tools:text="@string/learn1_details"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:id="@+id/address"
            android:gravity="top"
            android:textStyle="bold"
            android:layout_below="@id/details"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            tools:text="@string/learn1_address"/>


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:src= "@drawable/baseline_play_arrow_white_24dp"/>

    </RelativeLayout>

</RelativeLayout>









